--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -813,7 +813,7 @@
                                             <div class="cart_extra_total_value ml-auto">Free</div>
                                         </div>
                                         <div th:unless="${order.getShippingMethod() == 'Free'}" class="cart_extra_total_value ml-auto">
-                                            <div class="cart_extra_total_value ml-auto">7.99</div>
+                                            <div class="cart_extra_total_value ml-auto">7.99₺</div>
                                         </div>
                                     </li>
                                     <li class="d-flex flex-row align-items-center justify-content-start">
@@ -827,7 +827,7 @@
                                     </li>
                                     <li class="d-flex flex-row align-items-center justify-content-start">
                                         <div class="cart_extra_total_title">Coupon</div>
-                                        <div class="cart_extra_total_value ml-auto">0.00</div>
+                                        <div class="cart_extra_total_value ml-auto">0.00₺</div>
                                     </li>
                                     <li class="d-flex flex-row align-items-center justify-content-start">
                                         <div class="cart_extra_total_title relativer">Total</div>
@@ -849,7 +849,7 @@
                                                 <input type="radio" id="cargo_radio_1" name="cargo_radio"
                                                        class="payment_radio" value="Aras Cargo" checked ="checked" required>
                                                 <span class="radio_mark"></span>
-                                                <span class="radio_text">Aras Kargo</span>
+                                                <span class="radio_text">Aras Cargo</span>
                                             </label>
                                         </li>
                                         <li class="shipping_option d-flex flex-row align-items-center justify-content-start">
