--- a/src/main/resources/templates/user_details/_wish-list.html
+++ b/src/main/resources/templates/user_details/_wish-list.html
@@ -24,7 +24,7 @@
                                 <a th:href="'/product/' + ${product.getProductId()}">
                                     <div>
                                         <div class="product_image"><img
-                                                src="images/seker_portakali.jpg" alt=""
+                                                th:src="@{/static/images/seker_portakali.jpg}" alt=""
                                                 class="product_image_img"></div>
                                     </div>
                                     <div class="product_name_container">
