--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -76,14 +76,14 @@
                                         <div class="form-group">
                                             <label>Full Name On the Card</label>
                                             <input id="name" type="text" class="checkout_input form-control" name="name"
-                                                   required="required" pattern="^[a-zA-Z ]+$">
+                                                   required="required" pattern="^[a-zA-Z]{3,}(\s)[a-zA-Z]{3,}$">
                                         </div>
 
                                         <div class="form-group">
                                             <label>Card Number</label>
                                             <div class="input-group">
                                                 <input id="credit_number" type="text" class="checkout_input form-control credit-card"
-                                                       name="card-number" required="required" >
+                                                       name="card-number"  patteren=".{19}" minlength="19" required="required">
                                                 <div class="input-group-append">
                                                         <span class="input-group-text text-muted">
                                                             <i class="fa fa-cc-visa"></i>   <i
@@ -100,7 +100,7 @@
                                                 <select name="billing_address_title" id="expiration-month"
                                                         class="dropdown_item_select checkout_input form-control"
                                                         required ="required">
-                                                    <option>MONTH</option>
+                                                    <option value="">MONTH</option>
                                                     <option value="1">1</option>
                                                     <option value="2">2</option>
                                                     <option value="3">3</option>
@@ -118,7 +118,7 @@
                                                 <select name="billing_address_title" id="expiration-year"
                                                         class="dropdown_item_select checkout_input form-control"
                                                         required="required">
-                                                    <option>YEAR</option>
+                                                    <option value="">YEAR</option>
                                                     <option value="2020">2020</option>
                                                     <option value="2021">2021</option>
                                                     <option value="2022">2022</option>
@@ -142,8 +142,8 @@
                                             <label data-toggle="tooltip" title=""
                                                    data-original-title="3-digit number on the back side of the card.">CVV
                                                 <i class="fa fa-question-circle"></i></label>
-                                            <input id="cvv" type="number" class="checkout_input form-control cvv"
-                                                   required="required">
+                                            <input id="cvv" type="text" class="checkout_input form-control cvv"
+                                                   pattern="^[0-9]{3}$" required="required" >
                                         </div>
 
                                         <input type="submit" style="cursor:pointer" id="ConfirmCreditCard" value="Confirm" class="checkout_button trans_200">
