--- a/src/main/resources/templates/user_details/_cart.html
+++ b/src/main/resources/templates/user_details/_cart.html
@@ -26,7 +26,7 @@
                                 <a th:href="'/product/' + ${product.getProductId()}">
                                     <div>
                                         <div class="product_image"><img
-                                                src="images/hayvan_ciftligi.jpg" alt=""
+                                                th:src="@{/static/images/hayvan_ciftligi.jpg}" alt=""
                                                 class="product_image_img"></div>
                                     </div>
                                     <div class="product_name_container">
